--- a/hotel_management/package.json
+++ b/hotel_management/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-firebase/firestore": "^17.3.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
     "expo": "^48.0.0",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.17.2",
     "react": "18.2.0",
-    "react-native": "0.71.3",
+    "react-native": "^0.71.4",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-safe-area-context": "4.5.0",
